[tool.poetry]
name = "dejury"
version = "0.1.0"
description = ""
authors = ["Adam Gold <adamgold7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
contracting = "^1.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
